<resources>
    <string name="app_name">MADProject</string>
    <string name="proucts">Products</string>
    <string name="Textiles">Textiles</string>
    <string name="Jewellery">Jewellery</string>
    <string name="KitchenDining">Kitchen Dining</string>
    <string name="WoodenItems">Wooden Items</string>
    <string name="RushReedItems">Rush Reed Items</string>
    <string name="Textiles1">Textiles</string>
    <string name="Handloomclassbags">Handloom class bags</string>
    <string name="socks">Handmade socks</string>
    <string name="sofasidepillow">Sofa side pillow</string>
    <string name="traditionalbags">Traditional bags</string>
    <string name="price">Rs - 1100.00</string>
    <string name="price1">Rs - 450.00</string>
    <string name="price2">Rs - 2500.00</string>
    <string name="price3">Rs - 300.00</string>
    <string name="price4">Rs - 1900.00</string>
    <string name="cart">Add to cart</string>
    <string name="Jewellery1">Jewellery</string>
    <string name="handmadebracelet">Handmade bracelet</string>
    <string name="handmadenecklace">Handmade necklace</string>
    <string name="earrings">Earrings</string>
    <string name="pricev1">Rs - 400.00</string>
    <string name="pricev2">Rs - 350.00</string>
    <string name="pricev3">Rs - 25.00</string>
    <string name="pricev4">Rs - 300.00</string>
    <string name="pricev5">Rs - 450.00</string>
    <string name="KitchenDining1">Kitchen Dining</string>
    <string name="CoconutshellKithull">Coconut shell Kithul</string>
    <string name="puretablemate">Pure table mates</string>
    <string name="fabrictablemate">Fabric table mates</string>
    <string name="fridgedoorcover">Fridge door handle cover</string>
    <string name="pricevalue1">Rs - 200.00</string>
    <string name="pricevalue3">Rs - 50.00</string>
    <string name="pricevalue4">Rs - 550.00</string>
    <string name="Woodentems">Wooden Items</string>
    <string name="kidschair">Wooden chair for kids</string>
    <string name="toycar">Wooden toy car</string>
    <string name="woodenhelicopter">wooden toy helicopter</string>
    <string name="elephent">Wooden elephant</string>
    <string name="woodenweel">Wooden threeweel</string>
    <string name="pricev8">Rs - 2000.00</string>
    <string name="RushReedItem1">Rush Reed bag</string>
    <string name="RushReedItem2">Rush Reed bin</string>
    <string name="RushReedItem3">Rush Reed chair</string>
    <string name="RushReedItem4">Cane Storage box</string>
    <string name="additems">Add Items</string>
    <string name="addimage">Add image</string>
    <string name="itemdelete">Remove item</string>
    <string name="updateitem">Edit item</string>
    <string name="removeitem">Remove item</string>
    <string name="addname">Add item name</string>
    <string name="addprice">Add item price</string>
</resources>